--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,69 @@
 
 #title {
     background-color: #ff4c68;
+    color: white;
+}
+
+#features {
+    padding: 7% 15%;
 }
 
 
 /*-----------------------------------TAG/*-----------------------------------*/
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
 
 
 /*-----------------------------------CLASSI/*-----------------------------------*/
 
 .h1-title {
     font-family: 'Montserrat', sans-serif;
-    size: 3rem;
+    size: 3.5rem;
     line-height: 1.5;
     font-weight: 900;
 }
 
 .container-fluid {
     padding: 3% 15%;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: lighter;
+}
+
+.button-download {
+    margin: 5% 3% 5% 0;
+}
+
+.img-title {
+    width: 60%;
+    transform: rotate(25deg);
+}
+
+.feature-box {
+    text-align: center;
+    padding: 5%;
 }
