--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ body {
 h3 {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    font-size: 1.5rem;
+}
+
+p {
+    color: #757575;
 }
 
 
