Aggiunto prezzo e css

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@
     padding-bottom: 3%;
 }
 
+#pricing {
+    padding: 150px;
+    text-align: center;
+}
+
 
 /*-----------------------------------TAG/*-----------------------------------*/
 
@@ -114,4 +119,8 @@ h2 {
 
 .carousel-item {
     padding: 7% 15%;
+}
+
+.pricing-col {
+    padding: 3% 2%;
 }
