--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 #testimonials {
@@ -60,7 +62,7 @@ h2 {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 .navbar-brand {
@@ -88,8 +90,10 @@ h2 {
 }
 
 .img-title {
-    width: 60%;
+    width: 18%;
     transform: rotate(25deg);
+    position: absolute;
+    left: 58%;
 }
 
 .feature-box {
