--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,19 @@
     text-align: center;
 }
 
+#cta {
+    background-color: #ef8172;
+    padding: 5% 10%;
+    color: white;
+    text-align: center;
+}
+
+#footer {
+    background-color: white;
+    padding: 7% 14%;
+    text-align: center;
+}
+
 
 /*-----------------------------------TAG/*-----------------------------------*/
 
@@ -82,7 +95,7 @@ h2 {
 .nav-link {
     font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
-    font-weight: lighter;
+    font-weight: 300;
 }
 
 .button-download {
@@ -127,4 +140,36 @@ h2 {
 
 .pricing-col {
     padding: 3% 2%;
+}
+
+.cta-title {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding: 0 10%;
+    padding-bottom: 4%;
+}
+
+.copyright-text {
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+
+.social-icon {
+    margin: 0 1.5%;
+    text-decoration: none;
+    color: black;
+}
+
+
+/* media query*/
+
+@media (max-width: 900px) {
+    .img-title {
+        display: none;
+    }
+    #title {
+        text-align: center;
+    }
 }
