--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /*-----------------------------------ID/*-----------------------------------*/
 
 #title {
-    background-color: #ff4c68;
+    background-color: #141414;
     color: white;
 }
 
@@ -13,14 +13,8 @@
 
 #testimonials {
     text-align: center;
-    background-color: #ef8172;
+    background-color: #141414;
     color: white;
-}
-
-#press {
-    text-align: center;
-    background-color: #ef8172;
-    padding-bottom: 3%;
 }
 
 #pricing {
@@ -29,7 +23,7 @@
 }
 
 #cta {
-    background-color: #ef8172;
+    background-color: #141414;
     padding: 5% 10%;
     color: white;
     text-align: center;
@@ -82,6 +76,7 @@ h2 {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
+    color: white;
 }
 
 .navbar {
@@ -89,11 +84,11 @@ h2 {
 }
 
 .nav-item {
-    padding: 0 18px;
+    padding: 0 10px;
 }
 
 .nav-link {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
 }
@@ -102,36 +97,29 @@ h2 {
     margin: 5% 3% 5% 0;
 }
 
-.img-title {
-    width: 18%;
-    transform: rotate(25deg);
-    position: absolute;
-    left: 58%;
-}
-
 .feature-box {
     text-align: center;
     padding: 5%;
 }
 
 .feature-icon {
-    color: #ef8172;
+    color: #141414;
     margin-bottom: 1rem;
 }
 
 .feature-icon:hover {
-    color: #ff4c68;
+    color: #141414;
+    opacity: 85%;
+}
+
+.feature-text:hover {
+    opacity: 85%;
 }
 
 .testimonial-image {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
-}
-
-.press-img {
-    width: 7%;
-    margin: 20px 20px 50px;
 }
 
 .carousel-item {
@@ -160,6 +148,19 @@ h2 {
     margin: 0 1.5%;
     text-decoration: none;
     color: black;
+}
+
+.descrizione-subtitle {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: #757575;
+}
+
+.profile-picture {
+    border-radius: 100%;
+    width: 35%;
+    margin-left: 60%;
 }
 
 
