--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ p {
 h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 
@@ -155,6 +155,14 @@ h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     color: #757575;
+}
+
+.descrizione-subtitle-cta {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: #757575;
+    padding: 1% 7%;
 }
 
 .profile-picture {
