--- a/css/styles.css
+++ b/css/styles.css
@@ -5,24 +5,24 @@
     color: white;
 }
 
-#features {
+#istruzione {
     padding: 7% 15%;
     background-color: white;
     position: relative;
 }
 
-#testimonials {
+#esperienze {
     text-align: center;
     background-color: #141414;
     color: white;
 }
 
-#pricing {
+#skills {
     padding: 150px;
     text-align: center;
 }
 
-#cta {
+#contacts {
     background-color: #141414;
     padding: 5% 10%;
     color: white;
