--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 
 #contacts {
     padding: 5% 10%;
+    text-align: center;
 }
 
 #footer {
@@ -64,7 +65,7 @@ h2 {
 
 /*-----------------------------------CLASSI/*-----------------------------------*/
 
-.h1-title {
+#title.h1-title {
     size: 3.5rem;
     line-height: 1.5;
     font-weight: 900;
@@ -94,7 +95,7 @@ h2 {
     font-weight: 300;
 }
 
-.button-download {
+.button-contact-me {
     margin: 5% 3% 5% 0;
 }
 
@@ -150,8 +151,8 @@ h2 {
     color: black;
 }
 
-.descrizione-subtitle-cta {
-    padding: 1% 7%;
+.social-icon:hover {
+    color: rgb(114, 114, 114);
 }
 
 .profile-picture {
@@ -173,6 +174,15 @@ h2 {
     font-size: 1.5rem;
     font-weight: 300;
     color: #757575;
+}
+
+.descrizione-subtitle-cta {
+    padding: 1% 7%;
+    font-size: 1.25rem;
+}
+
+.envelope-icon-btn-download {
+    padding: 5px;
 }
 
 
