--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
     /*-----------------------------------ID/*-----------------------------------*/
     
     #title {
-        background-color: #141414;
+        background-color: #2b6777;
         color: white;
     }
     
@@ -27,7 +27,7 @@
     #esperienze {
         color: white;
         text-align: center;
-        background-color: #141414;
+        background-color: #52ab98;
     }
     
     #footer,
@@ -42,7 +42,7 @@
     }
     
     p {
-        color: #757575;
+        color: #2b6777;
     }
     
     h2 {
@@ -75,7 +75,7 @@
         font-family: 'Ubuntu', sans-serif;
         font-size: 2.5rem;
         font-weight: bold;
-        color: white;
+        color: c8d8e4;
     }
     
     .navbar {
@@ -101,17 +101,21 @@
     }
     
     .feature-icon {
-        color: #141414;
+        color: #1d4550;
         margin-bottom: 1rem;
     }
     
     .feature-icon:hover {
-        color: #141414;
+        color: #4d8494;
         opacity: 85%;
     }
     
     .feature-text:hover {
         opacity: 85%;
+    }
+    
+    .feature-text {
+        color: #2b6777;
     }
     
     .testimonial-image {
@@ -146,11 +150,11 @@
     .social-icon {
         margin: 0 1.5%;
         text-decoration: none;
-        color: black;
+        color: #2b6777;
     }
     
     .social-icon:hover {
-        color: #686868;
+        color: #4d8494;
     }
     
     .profile-picture {
@@ -175,7 +179,7 @@
     .descrizione-subtitle {
         font-size: 1.3rem;
         font-weight: 300;
-        color: #686868;
+        color: #c8d8e4;
     }
     
     .descrizione-subtitle-cta {
@@ -195,14 +199,14 @@
     .esperienze-title {
         font-size: 1.5rem;
         font-weight: 300;
-        color: white;
+        color: c8d8e4;
         margin: 5%;
     }
     
     .descrizione-description {
         font-size: 1.2rem;
         font-weight: 300;
-        color: rgb(206, 206, 206);
+        color: #c8d8e4;
         margin: 1%;
     }
     /* media query*/
