--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,11 @@
     h2 {
         font-family: 'Montserrat', sans-serif;
     }
+    
+    a {
+        text-decoration: none;
+        color: #2b6777;
+    }
     /*-----------------------------------CLASSI/*-----------------------------------*/
     
     #title.h1-title {
@@ -147,8 +152,12 @@
     .copyright-text {
         font-size: 1rem;
         font-weight: 300;
-        margin-top: 2%;
+        margin-top: 1%;
         margin-bottom: 0;
+    }
+    
+    .copyright-text:hover {
+        color: #4d8494;
     }
     
     .social-icon {
@@ -212,6 +221,31 @@
         font-weight: 300;
         color: #c8d8e4;
         margin: 1%;
+    }
+    
+    .skill-level {
+        color: #52ab98;
+        font-size: 1.5rem;
+    }
+    
+    .skill-title {
+        color: white;
+        font-size: 1.7rem;
+    }
+    
+    .skills-header {
+        color: #2b6777;
+        font-size: 2rem;
+        margin-bottom: 3%;
+    }
+    
+    .esperienze-header {
+        color: white;
+        font-size: 2rem;
+    }
+    
+    .card-header {
+        background-color: #52ab98;
     }
     /* media query*/
     
