--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,8 @@
     .navbar-brand {
         font-family: 'Ubuntu', sans-serif;
         font-size: 2.5rem;
-        font-weight: bold;
-        color: c8d8e4;
+        font-weight: 300;
+        color: #c8d8e4;
     }
     
     .navbar {
