--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@
     
     .skill-level {
         color: #52ab98;
-        font-size: 1.3derem;
+        font-size: 1.4rem;
     }
     
     .skill-title {
